# PuntLab

./: .env.example  .gitignore  docker-compose.yml
agent/: .env.example  Dockerfile  pyproject.toml
agent/src/: __init__.py  config.py  main.py
agent/src/accumulators/: __init__.py  builder.py  distributor.py  strategies.py
agent/src/cache/: __init__.py  client.py
agent/src/db/: __init__.py  connection.py  models.py  queries.py
agent/src/evaluation/: __init__.py
agent/src/llm/: __init__.py  prompts.py  providers.py  schemas.py
agent/src/pipeline/: __init__.py  graph.py  llm_json.py  quick_run.py  router.py  state.py
agent/src/providers/: __init__.py  api_football.py  balldontlie.py  base.py  football_data.py  odds_mapping.py  orchestrator.py  rss_feeds.py  tavily_search.py  the_odds_api.py
agent/src/schemas/: __init__.py  accumulators.py  analysis.py  common.py  fixture_details.py  fixtures.py  llm_decisions.py  market_snapshot.py  news.py  odds.py  stats.py  users.py
agent/src/scoring/: __init__.py  engine.py  weights.py
agent/src/scrapers/: __init__.py  resolver.py  sportybet_api.py  sportybet_browser.py  sportybet_fixture_probe.py  sportybet_fixture_stats.py  sportybet_today.py  sportybet_today_full_report.py
agent/src/telegram/: __init__.py  admin.py  bot.py  broadcast.py  commands.py  formatters.py
agent/tests/: test_config.py  test_main.py
agent/tests/accumulators/: test_builder.py  test_distributor.py  test_strategies.py
agent/tests/cache/: test_client.py
agent/tests/db/: test_connection.py  test_models.py  test_queries.py
agent/tests/llm/: test_prompts.py  test_providers.py  test_schemas.py
agent/tests/pipeline/: test_accumulator_building.py  test_approval.py  test_delivery.py  test_explanation.py  test_graph.py  test_ingestion.py  test_market_resolution.py  test_quick_run.py  test_ranking.py  test_research.py  test_scoring.py  test_state.py
agent/tests/providers/: test_api_football.py  test_balldontlie.py  test_base.py  test_football_data.py  test_odds_mapping.py  test_orchestrator.py  test_rss_feeds.py  test_tavily_search.py  test_the_odds_api.py
(+63 files in other folders)
