# Python packaging definition for the PuntLab agent runtime.
# Scope: declares the installable package, runtime dependencies, and local
# development tooling needed by the autonomous agent service.
# Dependencies: consumed by `pip install -e ".[dev]"` and the agent Dockerfile.

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "puntlab-agent"
version = "0.1.0"
description = "Autonomous sports betting recommendation agent for PuntLab."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "PuntLab" },
]
dependencies = [
  "aiogram>=3.13.1",
  "APScheduler>=3.10.4",
  "asyncpg>=0.29.0",
  "feedparser>=6.0.11",
  "httpx>=0.27.2",
  "langchain>=0.3.7",
  "langchain-anthropic>=0.2.4",
  "langchain-openai>=0.2.8",
  "langfuse>=2.57.1",
  "langgraph>=0.2.45",
  "playwright>=1.48.0",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "python-dotenv>=1.0.1",
  "redis>=5.1.1",
  "sqlalchemy[asyncio]>=2.0.36",
  "tavily-python>=0.5.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.3",
]

[project.scripts]
puntlab-agent = "src.main:run"
puntlab-agent-quick-run = "src.pipeline.quick_run:run"
puntlab-agent-sportybet-fixture-probe = "src.scrapers.sportybet_fixture_probe:run"
puntlab-agent-sportybet-fixture-stats = "src.scrapers.sportybet_fixture_stats:run"
puntlab-agent-sportybet-today = "src.scrapers.sportybet_today:run"
puntlab-agent-sportybet-today-full-report = "src.scrapers.sportybet_today_full_report:run"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/pyproject.toml",
  "/Dockerfile",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["src"]
